[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Scripts/UI/dialogue_box.gd" id="1_script"]
[ext_resource type="FontFile" path="res://Textures/Fonts/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="2_font"]
[ext_resource type="FontFile" path="res://Textures/Fonts/CyberpunkCraftpixPixel.otf" id="3_font_name"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.06, 0.12, 0.92)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.45, 0.55, 0.85, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.2, 0.3, 0.6, 0.35)
shadow_size = 6

[node name="DialogueBox" type="CanvasLayer" groups=["dialogue_box"]]
layer = 10
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -180.0
offset_right = -40.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Portrait" type="TextureRect" parent="Panel"]
layout_mode = 2
offset_left = -90.0
offset_top = -100.0
offset_right = 60.0
offset_bottom = 50.0
expand_mode = 1
stretch_mode = 5
visible = false

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.82, 1.0, 1.0)
theme_override_colors/font_shadow_color = Color(0.15, 0.2, 0.4, 0.8)
theme_override_font_sizes/font_size = 16
theme_override_fonts/font = ExtResource("3_font_name")
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
theme_override_colors/default_color = Color(0.92, 0.92, 0.95, 1.0)
theme_override_font_sizes/normal_font_size = 14
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
text = ""
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.6, 0.75, 1.0, 0.8)
theme_override_font_sizes/font_size = 12
theme_override_fonts/font = ExtResource("2_font")
text = "â–¼ Press F to continue"
horizontal_alignment = 2
